--- a/dots/ghostty.toml
+++ b/dots/ghostty.toml
@@ -1,4 +1,4 @@
 font-family = "Iosevka Term"
 font-size = "14"
 theme = "borland"
-initial-command = "/Users/aren.windham/.nix-profile/bin/fish"
+command = "/Users/aren.windham/.nix-profile/bin/fish"
